--- a/contact/index.html
+++ b/contact/index.html
@@ -4,17 +4,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MIStraLab - Contact</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/style.css" />
   <style>
+    /* Page base */
     body{
       font-family: Arial, sans-serif;
       margin:0;
       padding:0;
       background:#f5f5f5;
-      padding-top:60px;
+      padding-top:60px; /* space for fixed navbar */
       overflow-y:scroll;
     }
 
+    /* Keep if you’re using the fixed navbar from partials */
     nav{
       background:#002244;
       padding:10px 0;
@@ -24,6 +26,7 @@
     }
     nav a{ color:#fff; margin:0 15px; text-decoration:none; font-weight:bold; }
 
+    /* Card */
     .section{
       padding:30px;
       margin:20px auto;
@@ -37,16 +40,16 @@
     h2{
       font-size:36px;
       color:#002244;
-      margin-bottom:24px;
+      margin:0 0 24px;
     }
 
+    /* Layout */
     .contact-container{
       display:flex;
       gap:20px;
       align-items:flex-start;
-      flex-wrap:wrap;
+      flex-wrap:wrap; /* wraps cleanly on mid screens */
     }
-
     .contact-info{ flex:1 1 360px; }
     .contact-info p{ margin:6px 0; font-size:18px; }
 
@@ -58,7 +61,19 @@
       border-radius:8px;
     }
 
-    /* Website issue note */
+    /* Research contact callout (red, no emoji) */
+    .research-contact{
+      margin-top:12px;
+      padding:10px 14px;
+      font-size:16px;
+      color:#b22222;            /* firebrick red */
+      border-left:4px solid #b22222;
+      background:#fff5f5;       /* very light red */
+      border-radius:4px;
+      font-weight:500;
+    }
+
+    /* Website issues note (kept subtle) */
     .note{
       margin-top:16px;
       padding-top:10px;
@@ -73,14 +88,7 @@
     }
     .note a:hover{ text-decoration:underline; }
 
-    /* Emphasis line for research contact */
-    .research-contact{
-      margin-top:10px;
-      font-size:16px;
-      color:#444;
-      font-style:italic;
-    }
-
+    /* Mobile tweaks */
     @media (max-width:640px){
       .section{ padding:22px; }
       h2{ font-size:28px; margin-bottom:18px; }
@@ -108,20 +116,23 @@
         <p>Ankara, Türkiye</p>
         <p>Email: example@university.edu</p>
 
+        <!-- Red-accent line (no emoji) -->
         <p class="research-contact">
-          👉 For all <strong>research group inquiries</strong>, please contact Assist. Prof. Dr. Irmak Sargın.
+          For all <strong>research group inquiries</strong>, please contact Assist. Prof. Dr. Irmak Sargın.
         </p>
       </div>
 
       <div class="map-container">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3061.469550435158!2d32.782467499999996!3d39.8861183!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14d3464106ade6df%3A0x688b273f1308db0e!2sMETU%20Department%20of%20Metallurgy%20and%20Materials%20Engineering!5e0!3m2!1sen!2str!4v1739620975637!5m2!1sen!2str"
-          allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+          allowfullscreen
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade">
         </iframe>
       </div>
     </div>
 
-    <!-- Website issue note -->
+    <!-- Website issue note (only for website; stays subtle) -->
     <div class="note">
       <p>
         <em>Note:</em> For any <strong>issues related to the website</strong>, please contact
@@ -133,12 +144,12 @@
   <!-- Footer -->
   <div id="footer-placeholder"></div>
 
-  <!-- Navbar & Footer Loading -->
+  <!-- Load Navbar and Footer -->
   <script>
     fetch("/partials/navbar.html")
-      .then((response) => response.text())
-      .then((data) => {
-        document.getElementById("navbar-placeholder").innerHTML = data;
+      .then((r) => r.text())
+      .then((html) => {
+        document.getElementById("navbar-placeholder").innerHTML = html;
 
         const toggle = document.getElementById("hamburger-toggle");
         const links  = document.getElementById("nav-links");
@@ -161,9 +172,9 @@
       });
 
     fetch("/partials/footer.html")
-      .then((response) => response.text())
-      .then((data) => {
-        document.getElementById("footer-placeholder").innerHTML = data;
+      .then((r) => r.text())
+      .then((html) => {
+        document.getElementById("footer-placeholder").innerHTML = html;
       });
   </script>
 
