--- a/team/iremtopsakal/index.html
+++ b/team/iremtopsakal/index.html
@@ -159,7 +159,7 @@
       <img src="/images/profiles/iremtopsakal.jpg" alt="İrem Topsakal">
       <div class="details">
         <h2>İrem Topsakal</h2>
-        <p class="tenure">Sept 2024 – cont.</p>
+        <p class="tenure">MSc. Student | Sept 2024 – cont.</p>
 
         <div class="icons">
           <a href="https://iremtopsakal.github.io" target="_blank" title="Personal Website" aria-label="Personal Website"><i class="fas fa-globe"></i></a>
